Bug 697842 stopPropagation() shouldn't break IME composition r=ehsan